Add vercel.json to support SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
     "rewrites": [
-      { "source": "/admin/:path*", "destination": "/" },
-      { "source": "/category/:path*", "destination": "/" }
+      { "source": "/(.*)", "destination": "/" }
     ]
   }
   
